# paddleocr-license-plate-playbook

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh  test_compare.py
PaddleOCR/REPLACE_OUTPUT_DIR/: config.yml
PaddleOCR/ppocr/data/: __init__.py  distillation_dataset.py  simple_dataset.py
PaddleOCR/tools/: program.py
configs/distill/: rec_v5_distill.yml  rec_v5_distill_template.yaml
configs/multiframe/: rec_multiframe.yml
configs/sr/: sr_gestalt_plate.yml
configs/teacher/: rec_v5_teacher.yml
docs/approach_ocr/: README.md  backbone_freeze.md  distillation_lrlp.md  head_channels.md  multiframe_arch.md  multiframe_data.md
docs/approach_sr/: README.md  input_alignment.md  prefix_remapping.md  selective_freeze.md  stn_fix.md
notebooks/: basic_nlp.ipynb  check_results.ipynb  crawdata_travel.py  crawldata_agency.py  extract_obj.ipynb  regrex.ipynb  straug.ipynb
scripts/: download_dataset.sh  download_processed.sh  run.sh  setup.sh
scripts/data/: _dataset_utils.py  augment_data.py  build_dataset.py  build_distill_dataset.py  build_lmdb_sr.py  build_multiframe_dataset.py  crop_plates.py  prepare_ensemble.py  prepare_public_test.py  preprocess_resize.py  verify_lmdb_sr.py
scripts/infer/: infer_multiframe.py  infer_single.py  infer_sr.py
scripts/tools/: debug_pretrained_compatibility.py  download_pretrained.py  evaluate_ocr_models.py  export_ocr_models.py  fix_sr_pretrained.py  generate_configs.py  generate_distill_configs.py  generate_multiframe_configs.py  verify_freeze.py
src/plate_ocr/: paths.py
src/plate_ocr/data/: __init__.py  (+4 more)
(+37 files in other folders)
